XMLtoCSV/objects/unpackaged/objects/Account_Tactic_vod__c.object
<CustomObject>
    <description>This object stores all tactics created on an Account Plan</description>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to account plan.</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Account Tactics</relationshipLabel>
        <relationshipName>Account_Tactic_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Lookup to master account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Tactics</relationshipLabel>
        <relationshipName>Account_Tactic_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Objective_Progress_vod__c</fullName>
        <description>Sums up the progress based on Call Objective Completion represented as a percentage</description>
        <label>Call Objective Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Complete_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this tactic is complete.</description>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Call_Objectives_vod__c</fullName>
        <description>Contains the total number of COMPLETED Call Objectives (Completed_flag_vod = true) associated with Account Tactics within a given Account Plan</description>
        <label>Completed Call Objectives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of tactic.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Tactic_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Associates Account Tactic to Plan Tactic</description>
        <label>Plan Tactic</label>
        <referenceTo>Plan_Tactic_vod__c</referenceTo>
        <relationshipLabel>Account Tactics</relationshipLabel>
        <relationshipName>Account_Tactics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Strategy_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to product strategy associated with this tactic.</description>
        <label>Product Strategy</label>
        <referenceTo>Product_Strategy_vod__c</referenceTo>
        <relationshipLabel>Account Tactics</relationshipLabel>
        <relationshipName>Account_Tactic_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to product tactic associated with this tactic.</description>
        <label>Product Tactic</label>
        <referenceTo>Product_Tactic_vod__c</referenceTo>
        <relationshipLabel>Account Tactics</relationshipLabel>
        <relationshipName>Account_Tactic_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Picklist of products associated with this tactic - for display in the related list.</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Cholecap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labrinone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restolar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progress_Type_vod__c</fullName>
        <description>Drives how progress is defined: whether Call Objective completion or manually (set by Key Account Manager).</description>
        <label>Progress Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call_Objective_vod</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Call_Objectives_vod__c</fullName>
        <description>Contains the total number of Call Objectives associated with Account Tactics within a given Account Plan</description>
        <label>Total Call Objectives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Picklist describing the type of this account tactic.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-promote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulary position</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Tactic</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Tactics</pluralLabel>
    <recordTypes>
        <fullName>Account_Tactic_vod</fullName>
        <active>true</active>
        <description>Base record type for Account Tactics</description>
        <label>Account_Tactic_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>